--- a/package.json
+++ b/package.json
@@ -19,34 +19,38 @@
     "db:check": "tsx scripts/check-database.ts"
   },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@prisma/client": "^5.7.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "next-auth": "^4.24.5",
-    "bcryptjs": "^2.4.3",
+    "@prisma/client": "^5.7.0",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
     "lucide-react": "^0.263.1",
+    "next": "14.0.0",
+    "next-auth": "^4.24.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7",
-    "dotenv": "^16.3.1"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/bcryptjs": "^2.4.6",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.0.0",
+    "postcss": "^8.4.31",
     "prisma": "^5.7.0",
+    "tailwindcss": "^3.3.5",
+    "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.7.1",
-    "tailwindcss-animate": "^1.0.7"
+    "typescript": "^5.0.0"
   }
 }
